[package]
name = "hft-rag"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
qdrant-client = "1.14"
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
candle-datasets = "0.9"
hf-hub = { version = "0.3", features = ["tokio"] }
tokenizers = "0.19"
tantivy = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
config = "0.14"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
pdf-extract = "0.7"
csv = "1.3"
regex = "1.10"
lru = "0.12"
futures = "0.3"
dashmap = "5.5"
